# webhook-pattern

./: .gitignore  README.md  pyproject.toml  samconfig.toml  template.yaml
app/: deps.py  main.py  requirements.txt  settings.py
tests/: __init__.py  conftest.py  test_send_message.py
