[tool.poetry]
name = "webhook-pattern"
version = "0.1.0"
description = ""
authors = ["Elmer Medez <emedez@gmail.com>"]
readme = "README.md"
packages = [{include = "webhook_pattern"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.94.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
devtools = "^0.10.0"
mangum = "^0.17.0"
boto3 = "^1.26.94"
dynamodb-json = "^1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
